--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_artist">ArtistActivity</string>
     <string name="title_activity_concert">ConcertActivity</string>
+
+
+    <string name="txt_result_no">에 대한 검색 결과가 없습니다</string>
+    <string name="txt_result_add">아티스트/콘서트 추가요청하기</string>
 </resources>
